--- a/landingpage/src/index.css
+++ b/landingpage/src/index.css
@@ -3,3 +3,230 @@
 @import 'tailwindcss/utilities';
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz@10..48&family=Comfortaa&family=Inter:wght@600&family=Lobster&family=Lora:ital@1&family=Merriweather:ital,wght@1,300&family=Pacifico&family=Playfair+Display&family=Poppins:ital,wght@0,400;0,500;1,500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz@10..48&family=Comfortaa&family=Inter:wght@600&family=Lobster&family=Lora:ital@1&family=Merriweather:ital,wght@1,300&family=Mulish&family=Pacifico&family=Playfair+Display&family=Poppins:ital,wght@0,400;0,500;1,500&display=swap');
+
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    /* background-color: #CDCDCD; */
+}
+
+
+.section-1 {
+    background-image: url('./images/bg1.avif');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 85vh;
+    animation: change 10s infinite ease-in-out;
+}
+
+@keyframes change {
+    0% {
+        background-image: url('./images/bg1.avif');
+    }
+
+    20% {
+        background-image: url('./images/bg2.avif');
+    }
+
+    40% {
+        background-image: url('./images/bg-3.avif');
+    }
+
+    60% {
+        background-image: url('./images/bg-4.avif');
+    }
+
+    80% {
+        background-image: url('./images/bg5.avif');
+    }
+
+    100% {
+        background-image: url('./images/bg1.avif');
+    }
+
+}
+
+
+.glass-landing {
+    border: 2px solid white;
+    position: absolute;
+    top: 272px;
+    width: 510px;
+    height: 293px;
+    background-color: rgba(255, 255, 255, 0.7);
+    -webkit-backdrop-filter: blur(0.7);
+    backdrop-filter: blur(0.7);
+    z-index: 100;
+    left: 496px;
+
+}
+
+
+.head1 {
+
+    margin-top: 142px;
+    margin-left: 244px;
+    color: orange;
+    font-weight: 700;
+    font-size: 20px;
+
+
+}
+
+
+.head2 {
+    margin-left: 244px;
+    font-size: 30px;
+    width: 300px;
+    width: 1000px;
+    color: green;
+    letter-spacing: 0lh;
+}
+
+
+:root {
+    --color-primary: #5ec576;
+    --color-secondary: #ffcb03;
+    --color-tertiary: #ff585f;
+    --color-primary-darker: #4bbb7d;
+    --color-secondary-darker: #ffbb00;
+    --color-tertiary-darker: #fd424b;
+    --color-primary-opacity: #5ec5763a;
+    --color-secondary-opacity: #ffcd0331;
+    --color-tertiary-opacity: #ff58602d;
+    --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
+    --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
+}
+
+
+
+/* GENERAL ELEMENTS */
+.section {
+    padding: 15rem 3rem;
+
+
+    transition: transform 1s, opacity 1s;
+    margin-top: -153px;
+}
+
+.section--hidden {
+    opacity: 0;
+    transform: translateY(8rem);
+}
+
+
+
+.section__description {
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--color-primary);
+    margin-bottom: 1rem;
+}
+
+.section__header {
+    font-size: 4rem;
+    line-height: 1.3;
+    font-weight: 500;
+}
+
+
+p {
+    color: #666;
+    text-align: justify;
+    font-size: 18px;
+}
+
+
+img {
+    transition: filter 0.5s;
+}
+
+.lazy-img {
+    /* filter: blur(20px); */
+    border-radius: 30px;
+}
+
+/* NAVIGATION */
+
+
+
+
+/* FEATURES */
+.features {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+    margin: 0 12rem;
+}
+
+.features__img {
+    width: 200%;
+}
+
+.features__feature {
+    align-self: center;
+    justify-self: center;
+    /* width: 70%; */
+    font-size: 1.5rem;
+}
+
+.features__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-primary-opacity);
+    height: 5.5rem;
+    width: 5.5rem;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+
+}
+
+/* .features__icon svg {
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: var(--color-primary);
+} */
+
+.features__header {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.gallery {
+    transition: transform 1s;
+    transform-origin: center center;
+    /* This centers the transformation */
+}
+
+.gallery:hover {
+    transform: scale(1.2);
+}
+
+.light-effect {
+    transition: box-shadow 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.light-effect:hover {
+    box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.8);
+    /* Adjust shadow properties */
+    opacity: 0.8;
+    /* Adjust opacity to create the light effect */
+}
+
+.shadow-prop {
+    text-shadow: 2px 2px 4px orange;
+}
+
+.shadow-props {
+    text-shadow: 2px 2px 3px green;
+}
