--- a/landingpage/src/index.css
+++ b/landingpage/src/index.css
@@ -230,3 +230,52 @@ img {
 .shadow-props {
     text-shadow: 2px 2px 3px green;
 }
+
+
+
+.parent-container {
+    display: flex;
+    flex-wrap: wrap;
+    /* This allows items to wrap onto the next row */
+    justify-content: flex-start;
+    /* You can adjust this based on your layout needs */
+    gap: 16px;
+    /* Adjust the gap as needed */
+}
+
+
+.dimensions {
+    width: 395px;
+    height: 375px;
+}
+
+.image {
+    padding: 0px;
+    width: 121px;
+    /* margin: 0px 113px; */
+    border-radius: 10px;
+}
+
+.buy-image {
+    border: 2px solid white;
+    border-radius: 50%;
+    width: 152px;
+    position: relative;
+    left: 180px;
+    top: -27px;
+}
+
+.input-val {
+    width: 711px;
+    border: 2px solid orange;
+    position: relative;
+    left: 190px;
+    top: 54px;
+    border-radius: 34px;
+    padding: 14px 29px;
+}
+
+
+.box {
+    box-shadow: 8px 8px #fe7f2d;
+}
